--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,154 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    height: 1000px;
 }
 
 h1 {
     text-align: center;
+}
+
+.container {
+    text-align: center;
+    padding: 1.5rem;
+    margin: 0 auto;
+    max-width: fit-content;
+    border-radius: 10px;
+
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+
+.board {
+    margin-left: 6rem;
+    border: 2px solid #A9A9A9;
+    border-radius: 15px;
+    padding: 20px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #F5F5F5;
+    color: #fff;
+}
+
+.cells {
+    display: inline-grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    gap: 25px;
+    margin: 0 auto;
+}
+
+.cell {
+    background-color: #F0E68C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    font-size: 50px;
+    cursor: pointer;
+    padding: 0;
+}
+
+.cell.x {
+    background-color: #FF5733;
+}
+
+.cell.o {
+    background-color: #3498DB;
+}
+
+.player {
+    padding: 0.6rem 1rem;
+    border-radius: 5px;
+    background-color: lightblue;
+}
+
+.player.one {
+    align-self: flex-start;
+    background-color: #FF5733;
+}
+
+.player.two {
+    align-self: end;
+    background-color: #3498DB;
+}
+
+.result {
+    width: 100%;
+    color: #2ECC71;
+    /* background-color: #F5F5F5; */
+    font-weight: light;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.buttons button {
+    padding: 1rem 2rem;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 10px;
+    font-size: 18px;
+    color: inherit;
+}
+
+button.start {
+    background-color: #8E44AD;
+}
+
+button.reset {
+    background-color: #E74C3C;
+}
+
+/* FORM STYLES */
+
+
+form {
+    font-size: 20px;
+    display: none;
+}
+
+.form-group {
+    text-align: left;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+}
+
+.form-group input,
+.form-group select {
+    width: 100%;
+    font: inherit;
+    font-size: 16px;
+}
+
+.form-group label {
+    display: block;
+}
+
+button.submit {
+    font-size: inherit;
+    width: 100%;
+    padding: 0.3rem;
+    border: none;
+    background-color: #0D6EFD;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: self-start;
+}
+
+button.add {
+    font-size: 30px;
+    width: 5rem;
+    padding: 0.2rem;
+    border: none;
+    background-color: #0D6EFD;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: self-start;
 }
